Adds SafeHandle impl and debug.h

--- a/LearningCpp/Utility/Utility.vcxproj
+++ b/LearningCpp/Utility/Utility.vcxproj
@@ -78,7 +78,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Debug.h" />
     <ClInclude Include="Precompiled.h" />
+    <ClInclude Include="SafeHandle.h" />
     <ClInclude Include="Utlility.h" />
   </ItemGroup>
   <ItemGroup>
