--- a/LearningCpp/HelloBoost/HelloBoost.vcxproj
+++ b/LearningCpp/HelloBoost/HelloBoost.vcxproj
@@ -41,8 +41,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Source\boost_1_57_0;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Source\boost_1_57_0\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Source\boost_1_57_0;C:\Git\boost_1_57_0;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Source\boost_1_57_0\stage\lib;C:\Git\boost_1_57_0\lib32-msvc-12.0;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
